--- a/port-esp32s3/main/CMakeLists.txt
+++ b/port-esp32s3/main/CMakeLists.txt
@@ -6,8 +6,5 @@ idf_component_register(SRCS "main.cpp"
 "../../src/thread.c"
 "../../libretro-common/memalign.c"
 INCLUDE_DIRS "." "../../src" "../../libretro" "../../libretro-common/include")
+target_compile_options(${COMPONENT_LIB} PRIVATE -DFRONTEND_SUPPORTS_RGB565 -DHAVE_STDINT_H -DINLINE=inline -DLSB_FIRST -DUSE_FRAME_SKIP -O3)
 
-idf_build_set_property(COMPILE_OPTIONS "-DFRONTEND_SUPPORTS_RGB565" APPEND) 
-idf_build_set_property(COMPILE_OPTIONS "-DHAVE_STDINT_H" APPEND)
-idf_build_set_property(COMPILE_OPTIONS "-DINLINE=inline" APPEND)
-idf_build_set_property(COMPILE_OPTIONS "-DLSB_FIRST" APPEND)
