--- a/port-sdl1/CMakeLists.txt
+++ b/port-sdl1/CMakeLists.txt
@@ -3,8 +3,9 @@ cmake_minimum_required(VERSION 3.5)
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
 find_package(PkgConfig REQUIRED)
-find_package(SDL2 REQUIRED)
-message(STATUS "Found SDL2 at path: ${SDL2_INCLUDE_DIRS}")
+# Use Pkg-config to find SDL1
+pkg_check_modules(SDL REQUIRED sdl)
+message(STATUS "Found SDL1 at path: ${SDL_INCLUDE_DIRS}")
 
 # Define project
 project(gba)
@@ -17,6 +18,8 @@ add_executable(gba
 "../src/memory.cpp"
 "../src/sound.cpp"
 "../src/system.cpp"
+"../src/thread.c"
+"../libretro-common/memalign.c"
 "../libretro/libretro.cpp"
 )
 
@@ -24,9 +27,9 @@ target_compile_options(gba PRIVATE  -O3)
 
 target_include_directories(gba PRIVATE
     "../src" "../libretro" "../libretro-common/include"
-    ${SDL2_INCLUDE_DIRS}
+    ${SDL_INCLUDE_DIRS}
 )
 
 target_link_libraries(gba PRIVATE
-    ${SDL2_LIBRARIES}
+    ${SDL_LIBRARIES}
 )
