--- a/port-sdl2/CMakeLists.txt
+++ b/port-sdl2/CMakeLists.txt
@@ -11,7 +11,7 @@ project(gba)
 
 add_definitions(-DFRONTEND_SUPPORTS_RGB565 -DHAVE_STDINT_H -DINLINE=inline -DLSB_FIRST -DUSE_STATIC_WRAM)
 
-add_executable(gba
+add_executable(44gba
 "main.cpp" 
 "../src/gba.cpp"
 "../src/memory.cpp"
@@ -22,13 +22,13 @@ add_executable(gba
 
 )
 
-target_compile_options(gba PRIVATE  -O3)
+target_compile_options(44gba PRIVATE  -O3)
 
-target_include_directories(gba PRIVATE
+target_include_directories(44gba PRIVATE
     "../src" "../libretro" "../libretro-common/include"
     ${SDL2_INCLUDE_DIRS}
 )
 
-target_link_libraries(gba PRIVATE
+target_link_libraries(44gba PRIVATE
     ${SDL2_LIBRARIES}
 )
