--- a/port-esp32s3/main/CMakeLists.txt
+++ b/port-esp32s3/main/CMakeLists.txt
@@ -1,10 +1,5 @@
 idf_component_register(SRCS "main.cpp" 
-"../../src/gba.cpp"
-"../../src/memory.cpp"
-"../../src/sound.cpp"
-"../../src/system.cpp"
-"../../src/thread.c"
-"../../libretro-common/memalign.c"
+"os.c"
 INCLUDE_DIRS "." "../../src" "../../libretro" "../../libretro-common/include")
-target_compile_options(${COMPONENT_LIB} PRIVATE -DFRONTEND_SUPPORTS_RGB565 -DHAVE_STDINT_H -DINLINE=inline -DLSB_FIRST -DUSE_FRAME_SKIP -O3)
+target_compile_options(${COMPONENT_LIB} PRIVATE  -O2 -DFRONTEND_SUPPORTS_RGB565 -DHAVE_STDINT_H -DINLINE=inline -DLSB_FIRST -DUSE_FRAME_SKIP )
 
