--- a/port-sdl2/CMakeLists.txt
+++ b/port-sdl2/CMakeLists.txt
@@ -3,13 +3,12 @@ cmake_minimum_required(VERSION 3.5)
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
 find_package(PkgConfig REQUIRED)
-find_package(SDL2 REQUIRED)
-message(STATUS "Found SDL2 at path: ${SDL2_INCLUDE_DIRS}")
+pkg_check_modules(SDL REQUIRED sdl2)
 
 # Define project
 project(gba)
 
-add_definitions(-DFRONTEND_SUPPORTS_RGB565 -DHAVE_STDINT_H -DINLINE=inline -DLSB_FIRST -DUSE_STATIC_WRAM)
+add_definitions( -DFRONTEND_SUPPORTS_RGB565 -DHAVE_STDINT_H -DINLINE=inline -DLSB_FIRST -DUSE_STATIC_WRAM)
 
 add_executable(44gba
 "main.cpp" 
@@ -26,9 +25,9 @@ target_compile_options(44gba PRIVATE  -O3)
 
 target_include_directories(44gba PRIVATE
     "../src" "../libretro" "../libretro-common/include"
-    ${SDL2_INCLUDE_DIRS}
+    ${SDL_INCLUDE_DIRS}
 )
 
 target_link_libraries(44gba PRIVATE
-    ${SDL2_LIBRARIES}
+    ${SDL_LIBRARIES}
 )
